<resources>
    <string name="app_name" translatable="false">NeWork</string>
    <string name="posts">Posts</string>
    <string name="events">Events</string>
    <string name="users">Users</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="don_t_have_an_account">Don\'t have an account? Register</string>
    <string name="name">Name</string>
    <string name="description_user_s_avatar">User\'s Avatar</string>
    <string name="add_button">Add Button</string>
    <string name="remove">Remove</string>
    <string name="new_post">New post</string>
    <string name="post">Post</string>
    <string name="likes">Likes</string>
    <string name="mentioned">Mentioned</string>
    <string name="description_materials_attached_to_the_post">Materials attached to the post</string>
    <string name="description_event_broadcast_start_button">Event broadcast start button</string>
    <string name="description_take_photo_button">Photo take button</string>
    <string name="description_save_button">Save button</string>
    <string name="description_choose_users_button">User selection button</string>
    <string name="description_lication_button">Location button</string>
    <string name="description_take_attachment_button">Take attachment button</string>
    <string name="description_share_button">Share button</string>
    <string name="description_account_button">Account button</string>
    <string name="retry">Retry</string>
    <string name="error_of_loading">Error of loading</string>
    <string name="delete">Delete</string>
    <string name="edit">Edit</string>
    <string name="sign_in">Sign In</string>
    <string name="to_interact_with_publications_you_need_to_log_in">To interact with publications, you need to log in</string>
    <string name="cancel">Cancel</string>
    <string name="looking_for_a_job">Looking for a job</string>
    <string name="registration">Registration</string>
    <string name="have_an_account">Already have an account? Sign in</string>
    <string name="passwordCheck">Password check</string>
    <string name="passwords_don_t_match">Passwords don\'t match</string>
    <string name="fields_cannot_be_empty">Fields can\'t be empty</string>
    <string name="invalid_login">Invalid login</string>
    <string name="invalid_password">Invalid password</string>
    <string name="a_user_with_this_username_already_exists">A user with this username already exists</string>
    <string name="sign_out">Sign out</string>
    <string name="if_you_exit_now_progress_will_be_lost">If you exit now progress will be lost</string>
    <string name="get_out_anyway">Get out anyway</string>
    <string name="event">Event</string>
    <string name="participants">Participants</string>
    <string name="new_event">New event</string>
    <string name="description_add_an_event_date">Add an event date</string>
    <string name="type">Type</string>
    <string name="online" translatable="false">Online</string>
    <string name="offline" translatable="false">Offline</string>
    <string name="date_hint">date</string>
    <string name="description_date_picker">Date picker</string>
    <string name="description_save_selected_point_button">Save selected point button</string>
    <string name="wall">Wall</string>
    <string name="jobs">Jobs</string>
    <string name="description_the_button_for_deleting_a_place_of_work">The button for deleting a place of work</string>
    <string name="description_play_pause_button">Play/pause button</string>
    <string name="description_sign_out_button">Sign out button</string>
    <string name="the_name_of_the_song">The name of the song</string>
    <string name="position">Position</string>
    <string name="link">Link</string>
    <string name="create">Create</string>
    <string name="end_date">end date</string>
    <string name="date_start">date start</string>
    <string name="select_date">Select date</string>
    <string name="enter_dates">Enter dates</string>
    <string name="description_calendar_icon">Calendar icon</string>
    <string name="ok">OK</string>
</resources>