<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="@dimen/common_spacing"
    tools:context=".ui.NewJobFragment">

    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/reduce_spacing"
        android:autofillHints="name"
        android:hint="@string/name"
        android:inputType="text" />

    <EditText
        android:id="@+id/position"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/reduce_spacing"
        android:autofillHints="name"
        android:hint="@string/position"
        android:inputType="text" />

    <EditText
        android:id="@+id/link"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/reduce_spacing"
        android:autofillHints="name"
        android:hint="@string/link"
        android:inputType="text" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/reduce_spacing"
        android:background="@drawable/button_border"
        android:text="@string/date_hint"
        android:textColor="@color/primary" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/saveJob"
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/enlarged_spacing"
        android:layout_height="wrap_content"
        android:text="@string/create" />

</LinearLayout>