<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".ui.NewPostFragment">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/new_event">

        <Button
            android:id="@+id/saveButton"
            style="@style/Widget.Material3.Button.IconButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:contentDescription="@string/description_save_button"
            app:icon="@drawable/save_icon"
            app:iconTint="@color/black"
            tools:ignore="RedundantDescriptionCheck"
            tools:layout_editor_absoluteX="364dp"
            tools:layout_editor_absoluteY="8dp" />
    </com.google.android.material.appbar.MaterialToolbar>

    <EditText
        android:id="@+id/newContent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/common_spacing"
        android:hint="@string/new_post"
        android:importantForAutofill="no"
        android:inputType="textMultiLine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        tools:ignore="VisualLintLongText"
        tools:text="@tools:sample/lorem[34]" />

    <FrameLayout
        android:id="@+id/attachmentFrame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/common_spacing"
        android:layout_marginTop="@dimen/common_spacing"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/newContent">

        <ImageView
            android:id="@+id/imageAttachment"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center|top"
            android:contentDescription="@string/description_materials_attached_to_the_post"
            android:scaleType="centerCrop"
            tools:ignore="ImageContrastCheck"
            tools:src="@tools:sample/avatars" />

        <Button
            android:id="@+id/removeButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center|bottom"
            android:text="@string/remove" />
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:padding="@dimen/reduce_spacing"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <Button
            android:id="@+id/takePhotoButton"
            style="@style/Widget.Material3.Button.IconButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/description_take_photo_button"
            app:icon="@drawable/photo_camera_icon"
            app:iconTint="@color/black"
            tools:ignore="RedundantDescriptionCheck" />

        <Button
            android:id="@+id/takeAttachmentButton"
            style="@style/Widget.Material3.Button.IconButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/description_take_attachment_button"
            app:icon="@drawable/attachment_icon"
            app:iconTint="@color/black"
            tools:ignore="RedundantDescriptionCheck" />

        <Button
            android:id="@+id/chooseUsersButton"
            style="@style/Widget.Material3.Button.IconButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/description_choose_users_button"
            app:icon="@drawable/users_icon"
            app:iconTint="@color/black"
            tools:ignore="RedundantDescriptionCheck" />

        <Button
            android:id="@+id/chooseLocationButton"
            style="@style/Widget.Material3.Button.IconButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/description_location_button"
            app:icon="@drawable/location_icon"
            app:iconTint="@color/black"
            tools:ignore="RedundantDescriptionCheck" />

        <Space
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/addDateButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/description_add_an_event_date"
            android:src="@drawable/add_icon" />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>