<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="@dimen/common_spacing"
    tools:context=".ui.BottomSheetDialog">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/background"
        android:orientation="vertical"
        android:padding="@dimen/common_spacing">

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/date_hint"
            app:hintTextColor="@color/primary">

            <AutoCompleteTextView
                android:id="@+id/datePickerEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/date_hint"
                android:focusable="false"/>
        </com.google.android.material.textfield.TextInputLayout>

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/onlineButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/online" />

            <RadioButton
                android:id="@+id/offlineButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/offline" />

        </RadioGroup>

    </LinearLayout>

</androidx.cardview.widget.CardView>